Formulario violencia intrafamiliar creado

--- a/Delphos/web/META-INF/web.xml
+++ b/Delphos/web/META-INF/web.xml
@@ -261,6 +261,10 @@
         <servlet-name>Novedad</servlet-name>
         <servlet-class>formularios.Novedad</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ViolenciaIntrafamiliar</servlet-name>
+        <servlet-class>formularios.ViolenciaIntrafamiliar</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServletSeleccionarMunicipios</servlet-name>
         <url-pattern>/ServletSeleccionarMunicipios</url-pattern>
@@ -512,6 +516,10 @@
     <servlet-mapping>
         <servlet-name>Novedad</servlet-name>
         <url-pattern>/Novedad</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViolenciaIntrafamiliar</servlet-name>
+        <url-pattern>/ViolenciaIntrafamiliar</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>-1</session-timeout>
